# arrow_flight_duckdb

./: .gitignore  Cargo.toml  Makefile  README.md  hello.py  pyproject.toml
arrow_flight_duckdb/: duckdb_client.py
benchmark_results/: duckdb_groupby_avg  duckdb_groupby_complex  duckdb_groupby_count  duckdb_groupby_min_max  duckdb_groupby_sum  duckdb_select_start  duckdb_select_start_limit  pure_pa_groupby_avg  pure_pa_groupby_complex  pure_pa_groupby_count  pure_pa_groupby_min_max  pure_pa_groupby_sum  pure_pa_select_start  pure_pa_select_start_limit
marimos/: plot_benchmark.py
python/: client.py  server.py
src/: main.rs
tests/: test_duckdb_client.py
utils/: benchmark.py  dummies_server.py  plot_benchmark.py
