[package]
name = "arrow_flight_polars"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "54.0.0"
arrow-flight = "54.0.0"
bytes = "1.9.0"
futures = "0.3.31"
parquet = "54.0.0"
polars = { version = "0.45.1", features = ["ipc", "lazy"] }
tempfile = "3.15.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.17"
tonic = "0.12.3"
